--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
      margin: 0;
      padding: 5px;
     
-     direction: ltr; /* دعم الكتابة من اليمين لليسار */
+     /* دعم الكتابة من اليمين لليسار */
  }
  caption{
     font-size: 20px;
@@ -123,7 +123,7 @@
 .form-control {
     box-shadow: 0px 2px 6px #dbdade inset;
 }
-.form-control {
+.form-control,.row-item-pump {
     display: block;
     width: 100%;
     padding: 0.422rem 0.875rem;
@@ -138,30 +138,85 @@
     border-radius: 0.375rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+.row-item-pump{
+    margin-bottom: 4px;
+    text-align: center;
+    font-weight: 500;
+}
 .start-form{
     color: red;
 }
-.row-item{
-    display: flex; 
-    justify-content: space-between;
+
+.row-item-hadeer{
+    display: grid;
+    grid-template-columns: 0.75fr 0.25fr 0.25fr;
+    grid-gap: 10px;
+
 }
-.row{
+.row,.row-item-fieldset,.row-item,.row-item-fieldset-buttom{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
+}
+.row-item-fieldset{
+    grid-template-columns:0.25fr 1fr 1fr 1fr;
+}
+.row-item{
+    margin-bottom: 4px;
 }
 .text-center{
     text-align: center;
 }
 .btn{
     margin-top: 10px;
-    background-color: #9b9aa0;
+  
     padding: 10px 40px;
     border: 0px;
-    color: #000;
+   
     border-radius: 10px;
     font-size: 16px;
     font-weight: bold;
+    color: #fff;
+    background-color: #7367f0;
+    border-color: #7367f0;
+}
+.container{
+  width: 90%;
+  margin: auto;
+}
+.form-fieldset{
+    margin: 10px 0px;
+    border-style: dashed;
+    border-width: 1px;
+
+}
+.d-total{
+    border-style: dashed;
+    border-width: 1px;  
+    border-color:rgb(192, 192, 192);
+    padding: 5px;
+    font-weight: bold;
+}
+.d-Revenue {
+    padding: 4px 0px;
+
+}
+.d-Revenue hr{
+    width: 40%;
+}
+@media (max-width:600px) {
+    .row-item-hadeer{
+        grid-template-columns: 1fr;
+    }
+    .row-item-fieldset{
+        width: 100%;
+        overflow-x: auto;
+        grid-template-columns:17% 95% 95% 95%;
+    }
+    .row-item-fieldset-buttom{
+        overflow-x: auto;
+        grid-template-columns: 95% 95% 95%;
+    }
 }
  /*from*/
  
